Fix: text-align: left en abou-ci y as-investment

--- a/src/app/containers/about-ci/about-ci.component.scss
+++ b/src/app/containers/about-ci/about-ci.component.scss
@@ -35,7 +35,7 @@
 
         & .content-text{
             margin-bottom: 22px;
-            text-align: center;
+            text-align: left;
 
             & .title{
 
