--- a/src/app/containers/as-investment/as-investment.component.scss
+++ b/src/app/containers/as-investment/as-investment.component.scss
@@ -20,7 +20,7 @@
         padding: 50px 10px;
 
         & .content-text{
-            text-align: center;
+            text-align: left;
             margin-bottom: 22px;
 
             & .title{
